fixed linux launch script